@@ -133,12 +133,11 @@ use Config::Model::Value ;
 use warnings;
 use strict;
 
-eval { require AptPkg::Config ;} ;
-if ( $@ ) {
-    plan skip_all => "AptPkg::Config is not installed (not a Debian system ?)";
+if ( -r '/etc/debian_version' ) {
+    plan tests => 32;
 }
 else {
-    plan tests => 32;
+    plan skip_all => "Not a Debian system";
 }
 
 my $arg = shift || '';
