@@ -12,6 +12,7 @@ TODO:
        * Backend/Plainfile: now support list element in the form of multi line file.
          Each line of the file is a value of the list.
        * t/fuse_ui.t: skip test if lsmod cannot be used (e.g. Mandriva)
+       * t/debian*.t: skip test when /etc/debian_version is not found
 	
 2011-04-07 Dominique Dumont  <domi.dumont@free.fr> 1.241
     
